@@ -18,6 +18,7 @@
  */
 package org.apache.felix.eventadmin.impl.handler;
 
+import org.apache.felix.eventadmin.impl.handler.EventHandlerTracker.Matcher;
 import org.apache.felix.eventadmin.impl.tasks.AsyncDeliverTasks;
 import org.apache.felix.eventadmin.impl.tasks.DefaultThreadPool;
 import org.apache.felix.eventadmin.impl.tasks.SyncDeliverTasks;
@@ -49,6 +50,9 @@ public class EventAdminImpl implements EventAdmin
     // The synchronous event dispatcher
     private final SyncDeliverTasks m_sendManager;
 
+    // matchers for ignore topics
+    private Matcher[] m_ignoreTopics;
+
     /**
      * The constructor of the <tt>EventAdmin</tt> implementation.
      *
@@ -61,7 +65,8 @@ public class EventAdminImpl implements EventAdmin
                     final DefaultThreadPool asyncPool,
                     final int timeout,
                     final String[] ignoreTimeout,
-                    final boolean requireTopic)
+                    final boolean requireTopic,
+                    final String[] ignoreTopics)
     {
         checkNull(syncPool, "syncPool");
         checkNull(asyncPool, "asyncPool");
@@ -71,6 +76,7 @@ public class EventAdminImpl implements EventAdmin
         this.tracker.open();
         m_sendManager = new SyncDeliverTasks(syncPool, timeout);
         m_postManager = new AsyncDeliverTasks(asyncPool, m_sendManager);
+        m_ignoreTopics = EventHandlerTracker.createMatchers(ignoreTopics);
     }
 
     /**
@@ -87,6 +93,26 @@ public class EventAdminImpl implements EventAdmin
     }
 
     /**
+     * Check whether the topic should be delivered at all
+     */
+    private boolean checkTopic( final Event event )
+    {
+        boolean result = true;
+        if ( this.m_ignoreTopics != null )
+        {
+            for(final Matcher m : this.m_ignoreTopics)
+            {
+                if ( m.match(event.getTopic()) )
+                {
+                    result = false;
+                    break;
+                }
+            }
+        }
+        return result;
+    }
+
+    /**
      * Post an asynchronous event.
      *
      * @param event The event to be posted by this service
@@ -95,9 +121,13 @@ public class EventAdminImpl implements EventAdmin
      *
      * @see org.osgi.service.event.EventAdmin#postEvent(org.osgi.service.event.Event)
      */
+    @Override
     public void postEvent(final Event event)
     {
-        m_postManager.execute(this.getTracker().getHandlers(event), event);
+        if ( checkTopic(event) )
+        {
+            m_postManager.execute(this.getTracker().getHandlers(event), event);
+        }
     }
 
     /**
@@ -109,9 +139,13 @@ public class EventAdminImpl implements EventAdmin
      *
      * @see org.osgi.service.event.EventAdmin#sendEvent(org.osgi.service.event.Event)
      */
+    @Override
     public void sendEvent(final Event event)
     {
-        m_sendManager.execute(this.getTracker().getHandlers(event), event, false);
+        if ( checkTopic(event) )
+        {
+            m_sendManager.execute(this.getTracker().getHandlers(event), event, false);
+        }
     }
 
     /**
@@ -128,12 +162,14 @@ public class EventAdminImpl implements EventAdmin
      */
     public void update(final int timeout,
                     final String[] ignoreTimeout,
-                    final boolean requireTopic)
+                    final boolean requireTopic,
+                    final String[] ignoreTopics)
     {
         this.tracker.close();
         this.tracker.update(ignoreTimeout, requireTopic);
         this.m_sendManager.update(timeout);
         this.tracker.open();
+        this.m_ignoreTopics = EventHandlerTracker.createMatchers(ignoreTopics);
     }
 
     /**
